adicionei imagem e link

--- a/index.html
+++ b/index.html
@@ -8,20 +8,28 @@
     <link rel="stylesheet" href="estilos/style.css">
 </head>
 <body>
-    <h1>Cursos grátis</h1>
+   
 <main>
     <head>
-        <h1>Título do Site</h1>
+        <h1>Cursos grátis</h1>
+       
+        <img class="lado" src="imagens/cursos-gratuitos-mulher150px.png" alt="curso grátis">
         <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Perferendis quia at molestiae sit eos dolore quos molestias ullam exercitationem sed illum, reiciendis praesentium accusantium aliquam facilis natus ut enim necessitatibus?</p>
     </head>
     <article>
         <h2>Artigo 01</h2>
+        <img class="lado" src="imagens/Pequeno Garfanhoto eu150px.png" alt="Pequeno Garfanhoto">
         <p>Texto do Artigo 01</p>
         <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Perspiciatis ipsam numquam cum nostrum voluptate debitis pariatur repellat quos consequatur alias provident in tempora expedita iste, voluptatum aliquid, rem dolorem doloribus!</p>
     </article>
     <article>
         <h2>Artigo 02</h2>
         <p>Texto do Artigo 02</p>
+        <img src="imagens/Pequeno Garfanhoto eu180px.png" alt="Pequeno Garfanhoto">
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nobis ipsum exercitationem rem saepe dolore. Natus vel nemo pariatur eligendi hic voluptas. Natus ipsa dolores sit tempore fugiat, doloribus ad sint.</p>
+        <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. Vel, ducimus quasi eaque.</p>
+    
+       <p><a href="video-aleatorio.html" src="next">Acesse a página com vídeo</p>
     </article>
 </main>
 </body>
