--- a/video-aleatorio.html
+++ b/video-aleatorio.html
@@ -5,9 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vídeo aleatório</title>
+   
 </head>
 <body>
+  
     <h1>Vídeo aleatório</h1>
+    <img class="lado" src="imagens/Pequeno Garfanhoto eu120px.png" alt="Pequeno Garfanhoto">
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Aspernatur recusandae impedit nobis culpa eligendi possimus, quisquam nisi dolorum debitis odio ullam perferendis vitae quos itaque quia facere sit! Iusto, odio?</p>
   <iframe width="560" height="315" src="videos/pexels-maksim-goncharenok-5642525.mp4" frameborder="0" allowfullscreen></iframe>
   <p><a href="index.html">Voltar</a></p>
